--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 body {
     background-color: black;
+    text-align: center;
 }
 
 #header {
@@ -14,4 +15,5 @@ a {
     color: aquamarine;
     text-align: center;
     font-size: 16px;
+    text-decoration: underline;
 }
