--- a/css/styles.css
+++ b/css/styles.css
@@ -17,3 +17,19 @@ a {
     font-size: 16px;
     text-decoration: underline;
 }
+
+
+#header2 {
+    font-family: Verdana;
+    font-weight: 300;
+    font-size: 42px;
+    color: white;
+    text-align: center;
+}
+
+#subheader {
+    font-family: Verdana;
+    font-size: 21px;
+    color: gray;
+    text-align: center;
+}
